--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b5502847-3a2d-4a00-8e41-97786892b183"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
